<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/common_home_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/login_background"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/common_home_list_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    fresco:backgroundImage="@drawable/defaulticon"
                    fresco:roundAsCircle="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/common_home_list_username"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/common_home_list_time"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/edt_login_password"
                        android:layout_height="wrap_content"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/common_home_list_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/common_home_list_image"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                fresco:backgroundImage="@drawable/defaulticon"
                fresco:viewAspectRatio="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/common_home_list_forward"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingRight="10dp"
                        android:text="@string/list_item_forward"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/common_home_list_review"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingRight="10dp"
                        android:text="@string/list_item_review"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/common_home_list_flower"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingRight="10dp"
                        android:text="@string/list_item_flower"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>